# compression_benchmarking

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
benchkit/: __init__.py  analysis.py  cli.py  config.py  download.py  gpu.py  metrics.py  pipelines.py  provenance.py  runner.py  site.py  store.py
benchkit/adapters/: __init__.py  base.py  cusz_ref.py  cuszhi.py  cuszp.py  fzgm.py  fzgpu.py  lscomp.py  mans.py  mgard.py  pfpl.py  sperr.py  sz3.py  zfp.py
configs/: datasets.yaml  site.example.yaml
configs/experiments/: fzgm_graph_mode.yaml  fzgm_scaling.yaml  fzgm_scaling_v2.yaml  fzgm_scaling_v3.yaml  fzgm_vs_native.yaml  sdrbench-miranda.yaml  sdrbench.yaml  smoke-bigred200.yaml  smoke-cpu-refs.yaml  smoke-cusz.yaml  smoke-m3-refs.yaml  smoke.yaml
configs/pipelines/: cusz_f64.toml  cusz_hi_cr.toml  cusz_hi_tp.toml  cusz_minimal.toml  cusz_minimal_lowoutlier.toml  cuszp2.toml  cuszp2_minimal.toml  cuszp2_plain.toml  cuszp3.toml  cuszp3_1d.toml  cuszp3_1d_outlier.toml  cuszp3_3d.toml  cuszp3_3d_outlier.toml  cuszp3_outlier.toml  fzgpu.toml  fzgpu_f64.toml  fzgpu_minimal.toml  pfpl.toml  pfpl_minimal.toml
docs/: BASELINE_RUN_PLAN.md  BENCHMARK_PLAN.md  DESIGN.md  hpc-setup.md
scripts/: build_comparison_artifact.py  cleanup-sdrbench.sh  download-sdrbench.sh  env-bigred200.sh  env-jetstream2.sh  lock_clocks.sh  make_scaling_data.py  reconstruct_runs_from_stdout.py  resume_7543911.slurm  submit.slurm  submit_fzgm_scaling_v2.slurm  submit_fzgm_scaling_v3.slurm  submit_fzgm_vs_native.slurm  unlock_clocks.sh
(+22 files in other folders)
