[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "benchkit"
version = "0.1.0"
description = "Benchmarking harness for GPU error-bounded lossy compressors"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
analysis = ["pandas>=2.0", "matplotlib>=3.7"]

[project.scripts]
benchkit = "benchkit.cli:main"

[tool.setuptools]
packages = ["benchkit", "benchkit.adapters"]
